project/flask/nohup.out
Traceback (most recent call last):
  File "application.py", line 9, in <module>
    from api.user import *
  File "/root/21_hf216/project/flask/api/user.py", line 14
    def get_user_info(idx:int):
                         ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "application.py", line 9, in <module>
    from api.user import *
  File "/root/21_hf216/project/flask/api/user.py", line 14
    def get_user_info(idx:int):
                         ^
SyntaxError: invalid syntax
 * Serving Flask app 'api' (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: off
 * Running on all addresses.
   WARNING: This is a development server. Do not use it in a production deployment.
 * Running on http://10.0.0.8:5001/ (Press CTRL+C to quit)
í…Œì´ë¸” column ë¦¬ìŠ¤íŠ¸: ['*']
221.154.202.3 - - [23/Sep/2021 01:13:43] "POST /kakao/user/get/bookRead HTTP/1.1" 200 -
í…Œì´ë¸” column ë¦¬ìŠ¤íŠ¸: ['*']
221.154.202.3 - - [23/Sep/2021 01:13:51] "[35m[1mPOST /naver/user/get/bookRead HTTP/1.1[0m" 500 -
í…Œì´ë¸” column ë¦¬ìŠ¤íŠ¸: ['*']
221.154.202.3 - - [23/Sep/2021 01:14:52] "POST /naver/user/get/bookRead HTTP/1.1" 200 -
í…Œì´ë¸” column ë¦¬ìŠ¤íŠ¸: ['*']
221.154.202.3 - - [23/Sep/2021 01:15:07] "POST /naver/user/get/bookRead HTTP/1.1" 200 -
í…Œì´ë¸” column ë¦¬ìŠ¤íŠ¸: ['*']
221.154.202.3 - - [23/Sep/2021 01:15:12] "[35m[1mPOST /naver/user/get/bookRead HTTP/1.1[0m" 500 -
í…Œì´ë¸” column ë¦¬ìŠ¤íŠ¸: ['*']
221.154.202.3 - - [23/Sep/2021 01:15:15] "[35m[1mPOST /naver/user/get/bookRead HTTP/1.1[0m" 500 -
í…Œì´ë¸” column ë¦¬ìŠ¤íŠ¸: ['*']
221.154.202.3 - - [23/Sep/2021 01:15:51] "[35m[1mPOST /naver/user/get/bookRead HTTP/1.1[0m" 500 -
í…Œì´ë¸” column ë¦¬ìŠ¤íŠ¸: ['bookRead']
dbì— ì €ì¥ëœ ë°ì´í„°:  {'bookRead': ''}
ì‚½ì…í•  ê°’: ë‹¬ëŸ¬êµ¬íŠ¸ ê¿ˆ ë°±í™”ì 
ë‹¬ëŸ¬êµ¬íŠ¸ ê¿ˆ ë°±í™”ì 
ë°ì´í„° ì¶”ê°€ ì™„ë£Œ
1
221.154.202.3 - - [23/Sep/2021 01:15:53] "POST /kakao/user/insert/bookRead HTTP/1.1" 200 -
í…Œì´ë¸” column ë¦¬ìŠ¤íŠ¸: ['*']
221.154.202.3 - - [23/Sep/2021 01:16:33] "[35m[1mPOST /naver/user/get/bookRead HTTP/1.1[0m" 500 -
í…Œì´ë¸” column ë¦¬ìŠ¤íŠ¸: ['*']
221.154.202.3 - - [23/Sep/2021 01:16:54] "[35m[1mPOST /naver/user/get/bookRead HTTP/1.1[0m" 500 -
í…Œì´ë¸” column ë¦¬ìŠ¤íŠ¸: ['*']
221.154.202.3 - - [23/Sep/2021 01:17:16] "POST /naver/user/get/bookRead HTTP/1.1" 200 -
í…Œì´ë¸” column ë¦¬ìŠ¤íŠ¸: ['*']
221.154.202.3 - - [23/Sep/2021 01:17:38] "POST //kakao/user/get/bookWant HTTP/1.1" 200 -
221.154.202.3 - - [23/Sep/2021 01:37:57] "POST /kakao/recommend/title/similar HTTP/1.1" 200 -
í…Œì´ë¸” column ë¦¬ìŠ¤íŠ¸: ['*']
221.154.202.3 - - [23/Sep/2021 02:02:27] "POST /naver/user/get/bookRead HTTP/1.1" 200 -
221.154.202.3 - - [23/Sep/2021 02:02:30] "POST /naver/user/insert/bookRead HTTP/1.1" 200 -
221.154.202.3 - - [23/Sep/2021 02:02:33] "POST /naver/user/delete/bookRead HTTP/1.1" 200 -
221.154.202.3 - - [23/Sep/2021 02:02:40] "POST /naver/user/insert/bookRead HTTP/1.1" 200 -
í…Œì´ë¸” column ë¦¬ìŠ¤íŠ¸: ['*']
221.154.202.3 - - [23/Sep/2021 02:02:44] "POST /naver/user/get/bookRead HTTP/1.1" 200 -
í…Œì´ë¸” column ë¦¬ìŠ¤íŠ¸: ['*']
221.154.202.3 - - [23/Sep/2021 02:03:14] "POST /naver/user/get/bookWant HTTP/1.1" 200 -
í…Œì´ë¸” column ë¦¬ìŠ¤íŠ¸: ['*']
221.154.202.3 - - [23/Sep/2021 02:03:20] "POST /naver/user/get/interestBook HTTP/1.1" 200 -
í…Œì´ë¸” column ë¦¬ìŠ¤íŠ¸: ['*']
221.154.202.3 - - [23/Sep/2021 02:03:24] "POST /naver/user/get/interestAuthor HTTP/1.1" 200 -
í…Œì´ë¸” column ë¦¬ìŠ¤íŠ¸: ['*']
221.154.202.3 - - [23/Sep/2021 02:03:28] "POST /naver/user/get/interestCategory HTTP/1.1" 200 -
175.195.197.190 - - [23/Sep/2021 11:04:40] "[35m[1mPOST //kakao/book/get/title-info HTTP/1.1[0m" 500 -
175.195.197.190 - - [23/Sep/2021 11:04:44] "[35m[1mPOST /kakao/book/get/isbn13-info HTTP/1.1[0m" 500 -
175.195.197.190 - - [23/Sep/2021 11:04:48] "POST /kakao/book/get/top/bookRead HTTP/1.1" 200 -
í…Œì´ë¸” column ë¦¬ìŠ¤íŠ¸: ['*']
175.195.197.190 - - [23/Sep/2021 11:05:59] "[35m[1mPOST //kakao/book/get/title-info HTTP/1.1[0m" 500 -
í…Œì´ë¸” column ë¦¬ìŠ¤íŠ¸: ['*']
175.195.197.190 - - [23/Sep/2021 11:06:10] "[35m[1mPOST /kakao/book/get/isbn13-info HTTP/1.1[0m" 500 -
175.195.197.190 - - [23/Sep/2021 11:08:25] "POST /kakao/book/get/top/bookRead HTTP/1.1" 200 -
175.195.197.190 - - [23/Sep/2021 11:09:37] "POST /kakao/book/get/top/bookWant HTTP/1.1" 200 -
175.195.197.190 - - [23/Sep/2021 11:10:00] "POST /kakao/book/get/top/interestBook HTTP/1.1" 200 -
175.195.197.190 - - [23/Sep/2021 11:10:28] "POST /kakao/book/get/top/interestAuthor HTTP/1.1" 200 -
175.195.197.190 - - [23/Sep/2021 11:10:50] "POST /kakao/book/get/top/interestCategory HTTP/1.1" 200 -
